EPBDS fix bug with formula result reading